# DRIFT-LLM

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: check-style.yaml  run-tests.yaml
benchmarks/: benchmark_forward.py  benchmark_inference.py  benchmark_training.py
examples/: prompt-tuning-personachat.ipynb  prompt-tuning-sst2.ipynb
scripts/: build_hivemind_windows.py  hivemind-win32.patch  install.ps1  install.sh  smoke_tinyllama_local_swarm.py
src/drift/: __init__.py  constants.py  data_structures.py  dht_utils.py
src/drift/api/: server.py
src/drift/cli/: __main__.py  run_api.py  run_dht.py  run_down.py  run_prod_server.sh  run_server.py  run_up.py
src/drift/client/: __init__.py  config.py  from_pretrained.py  inference_session.py  lm_head.py  ptune.py  remote_forward_backward.py  remote_generation.py  remote_sequential.py  sequential_autograd.py
src/drift/client/routing/: __init__.py  sequence_info.py  sequence_manager.py  spending_policy.py
src/drift/models/: __init__.py  _gemma_block.py  _gqa_block.py
src/drift/models/bloom/: __init__.py  block.py  config.py  model.py
src/drift/models/deepseek_v3/: __init__.py  block.py  config.py  model.py
src/drift/models/falcon/: __init__.py  block.py  config.py  model.py
src/drift/models/gemma2/: __init__.py  block.py  config.py  model.py
src/drift/models/gemma3/: __init__.py  block.py  config.py  model.py
src/drift/models/gemma4/: __init__.py  block.py  config.py  model.py
src/drift/models/gemma4_unified/: __init__.py  block.py  config.py  model.py
src/drift/models/llama/: __init__.py  block.py  config.py  model.py  speculative_model.py
src/drift/models/mistral/: __init__.py  block.py  config.py  model.py
src/drift/models/mixtral/: __init__.py  block.py  config.py  model.py
src/drift/models/qwen2/: __init__.py  block.py  config.py  model.py
src/drift/models/qwen3/: __init__.py  block.py  config.py  model.py
src/drift/server/: backend.py  block_functions.py  block_selection.py  block_utils.py  from_pretrained.py  handler.py  memory_cache.py  reachability.py  server.py  throughput.py
src/drift/utils/: __init__.py  auto_config.py  convert_block.py  dht.py  disk_cache.py  file_lock.py  hardware.py  join_token.py  kv_cache.py  logging.py  misc.py  packaging.py  peft.py  ping.py  process_lifetime.py  server_registry.py  shared_kv.py  version.py  weight_conversion.py
src/drift/utils/tensor_parallel/: __init__.py  communications.py  configs.py  cross_device_ops.py  slicer.py  utils.py  wrapper.py
src/petals/: __init__.py
src/petals/cli/: __main__.py  run_server.py  run_up.py
src/petals/client/: inference_session.py  remote_forward_backward.py  remote_generation.py  sequential_autograd.py
src/petals/client/routing/: sequence_manager.py
src/petals/models/: __init__.py  _gemma_block.py  _gqa_block.py
src/petals/models/bloom/: block.py
src/petals/models/deepseek_v3/: __init__.py  block.py  config.py  model.py
src/petals/models/falcon/: block.py
src/petals/models/gemma2/: block.py  config.py  model.py
src/petals/models/gemma3/: __init__.py  block.py  config.py  model.py
src/petals/models/llama/: block.py  speculative_model.py
src/petals/models/mistral/: block.py  config.py  model.py
src/petals/models/mixtral/: block.py
src/petals/models/qwen2/: block.py  config.py  model.py
src/petals/models/qwen3/: __init__.py  block.py  config.py  model.py
src/petals/server/: backend.py  block_utils.py  from_pretrained.py  handler.py  memory_cache.py  server.py  throughput.py
src/petals/utils/: convert_block.py  disk_cache.py  file_lock.py  hardware.py  join_token.py  kv_cache.py  misc.py  peft.py  weight_conversion.py
src/petals/utils/tensor_parallel/: __init__.py  communications.py  configs.py  cross_device_ops.py  slicer.py  utils.py  wrapper.py
tests/: test_attn_implementation.py  test_aux_functions.py  test_block_exact_match.py  test_cache.py  test_chained_calls.py  test_deepseek_v3.py  test_dense_blocks.py  test_device_portability.py  test_dtype.py  test_full_model.py  test_gemma4_block.py  test_gemma4_multimodal_loading.py  test_gemma4_unified.py  test_join_token.py  test_kv_cache_strategy.py  test_openai_api.py  test_paged_cache.py  test_peft.py  test_priority_pool.py  test_process_lifetime.py  test_remote_sequential.py  test_sequence_manager.py  test_server_registry.py  test_server_stats.py  test_speculative_generation.py  test_startup_guard.py  test_tensor_parallel.py  test_tied_embeddings_from_pretrained.py
