[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "petals"
dynamic = ["version"]
description = "Easy way to efficiently run 100B+ language models without high-end GPUs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Petals Developers", email = "petals-devs@googlegroups.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.5,<2.6",
    "bitsandbytes>=0.45,<0.46",
    "accelerate>=1.0",
    "huggingface-hub>=0.30",
    "tokenizers>=0.21",
    "transformers>=5.12,<5.13",  # if changed, update the version assert in petals/__init__.py
    "speedtest-cli>=2.1.3",
    "hivemind @ git+https://github.com/learning-at-home/hivemind.git@213bff98a62accb91f254e2afdccbf1d69ebdea9",  # bumped in Phase 7
    "tensor_parallel==1.0.23",  # unmaintained; replaced in Phase 3
    "humanfriendly",
    "async-timeout>=4.0.2",
    "cpufeature>=0.2.0; platform_machine == 'x86_64'",
    "packaging>=20.9",
    "sentencepiece>=0.2.0",
    "peft>=0.17",
    "safetensors>=0.4.3",
    "requests>=2.31",  # used directly by petals; no longer pulled in transitively by huggingface-hub 1.x
    "Dijkstar>=2.6.0",
    "numpy<2",  # hivemind (old pin) is not numpy-2 ready; lifted in Phase 7
]

[project.optional-dependencies]
dev = [
    # pytest-forked (used for per-test process isolation) mishandles teardown on pytest >=7,
    # producing "previous item was not torn down properly" errors. Pin to the last pytest 6
    # until the test suite is migrated off pytest-forked. asyncio pin follows pytest.
    "pytest==6.2.5",
    "pytest-forked",
    "pytest-asyncio==0.16.0",
    "black==22.3.0",
    "isort==5.10.1",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/bigscience-workshop/petals"
"Bug Tracker" = "https://github.com/bigscience-workshop/petals/issues"

[tool.uv]
# The pinned hivemind commit ships a legacy setup.py that imports `pkg_resources` at
# build time, which recent setuptools no longer provides. Constrain the build backend
# so the sdist builds. TODO(Phase 7): drop once hivemind is upgraded to a modern build.
build-constraint-dependencies = ["setuptools<70"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "petals.__version__" }

[tool.pytest.ini_options]
# huggingface-hub 1.x pulls in anyio, whose pytest plugin autoloads but is unused here and
# breaks collection on the pinned pytest. Disable it.
addopts = "-p no:anyio"

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]
