[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "petals"
dynamic = ["version"]
description = "Easy way to efficiently run 100B+ language models without high-end GPUs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Petals Developers", email = "petals-devs@googlegroups.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Conservative upper caps: torch>=2.6 (latest 2.12) is a large jump whose serving-path
    # effects need the CI swarm suite to validate, and bitsandbytes (GPU-only quantization)
    # can't be exercised on the CPU dev box. Widen once validated on GPU/CI.
    "torch>=2.5,<2.6",
    "bitsandbytes>=0.45,<0.46",
    "accelerate>=1.0",
    "huggingface-hub>=0.30",
    "tokenizers>=0.21",
    "transformers>=5.13,<5.14",  # if changed, update the version assert in petals/__init__.py
    "speedtest-cli>=2.1.3",
    "hivemind>=1.1.12,<1.2",  # PyPI release: ships prebuilt p2pd wheels (no Go/sdist build), numpy-2 ready
    "humanfriendly",
    "async-timeout>=4.0.2",
    "cpufeature>=0.2.0; platform_machine == 'x86_64'",
    "packaging>=20.9",
    "sentencepiece>=0.2.0",
    "peft>=0.17",
    "safetensors>=0.4.3",
    "requests>=2.31",  # used directly by petals; no longer pulled in transitively by huggingface-hub 1.x
    "Dijkstar>=2.6.0",
    "numpy>=1.26",  # numpy 2 enabled in Phase 7 (hivemind>=1.1.12 requires only numpy>=1.17)
]

[project.optional-dependencies]
dev = [
    # These three + the `-p no:anyio` addopts below are one interlocked cluster pinned to the
    # pytest 6 era. Blockers to bumping: (a) pytest-forked mishandles teardown on pytest >=7
    # ("previous item was not torn down properly"); (b) tests/conftest.py overrides the
    # pytest-asyncio `event_loop` fixture, which 0.23+ deprecated and 0.26 removed (needs a
    # conftest rewrite); (c) the async/networking tests are only validated by the CI swarm
    # suite, not the offline tests. Bumping pytest would also let us drop `-p no:anyio`.
    "pytest==6.2.5",
    "pytest-forked",
    "pytest-asyncio==0.16.0",
    "black==22.3.0",
    "isort==5.10.1",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/bigscience-workshop/petals"
"Bug Tracker" = "https://github.com/bigscience-workshop/petals/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "petals.__version__" }

[tool.pytest.ini_options]
# huggingface-hub 1.x pulls in anyio, whose pytest plugin autoloads but requires pytest >=7
# (it imports _pytest.scope) and so breaks collection on the pinned pytest 6.2.5. Disable it;
# this can be removed once the pytest pin in [dev] above is lifted.
addopts = "-p no:anyio"

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]
