[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "petals"
dynamic = ["version"]
description = "Easy way to efficiently run 100B+ language models without high-end GPUs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Petals Developers", email = "petals-devs@googlegroups.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # torch 2.6 is the floor for Intel XPU: it's the earliest torch with prebuilt +xpu wheels
    # (download.pytorch.org/whl/xpu), and XPU block correctness is validated on it
    # (tests/test_device_portability.py). Upper cap stays conservative pending CI-swarm validation
    # of a larger jump (latest is 2.12). bitsandbytes (CUDA-only quantization) is optional at
    # runtime -- only imported for --quant_type int8/nf4 -- so non-CUDA backends don't need it.
    "torch>=2.6,<2.7",
    # bitsandbytes (CUDA-only quantization) publishes no macOS wheels -- gate it off Darwin so
    # `uv sync` resolves there; it's imported lazily (only for --quant_type int8/nf4), so CPU/Mac
    # backends run fine without it.
    "bitsandbytes>=0.45,<0.46; platform_system != 'Darwin'",
    "accelerate>=1.0",
    "huggingface-hub>=0.30",
    "tokenizers>=0.21",
    "transformers>=5.13,<5.14",  # if changed, update the version assert in petals/__init__.py
    "speedtest-cli>=2.1.3",
    # PyPI hivemind wheels are Linux/macOS only.  On Windows install the patched wheel produced by
    # scripts/build_hivemind_windows.py before `pip install -e .` (see README Windows section).
    "hivemind>=1.1.12,<1.2; sys_platform != 'win32'",
    "humanfriendly",
    "async-timeout>=4.0.2",
    "cpufeature>=0.2.0; platform_machine == 'x86_64'",
    "packaging>=20.9",
    "sentencepiece>=0.2.0",
    "peft>=0.17",
    "safetensors>=0.4.3",
    "requests>=2.31",  # used directly by petals; no longer pulled in transitively by huggingface-hub 1.x
    "Dijkstar>=2.6.0",
    "numpy>=1.26",  # numpy 2 enabled in Phase 7 (hivemind>=1.1.12 requires only numpy>=1.17)
]

[project.optional-dependencies]
dev = [
    # These three + the `-p no:anyio` addopts below are one interlocked cluster pinned to the
    # pytest 6 era. Blockers to bumping: (a) pytest-forked mishandles teardown on pytest >=7
    # ("previous item was not torn down properly"); (b) tests/conftest.py overrides the
    # pytest-asyncio `event_loop` fixture, which 0.23+ deprecated and 0.26 removed (needs a
    # conftest rewrite); (c) the async/networking tests are only validated by the CI swarm
    # suite, not the offline tests. Bumping pytest would also let us drop `-p no:anyio`.
    "pytest==6.2.5",
    "pytest-forked",
    "pytest-asyncio==0.16.0",
    "black==22.3.0",
    "isort==5.10.1",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/bigscience-workshop/petals"
"Bug Tracker" = "https://github.com/bigscience-workshop/petals/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "petals.__version__" }

[tool.pytest.ini_options]
# huggingface-hub 1.x pulls in anyio, whose pytest plugin autoloads but requires pytest >=7
# (it imports _pytest.scope) and so breaks collection on the pinned pytest 6.2.5. Disable it;
# this can be removed once the pytest pin in [dev] above is lifted.
addopts = "-p no:anyio"

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]
